# japanese-tts-webserver

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
