[project]
name = "parlertts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "torchaudio>=2.7.1",
    "transformers==4.46.1",
    "uvicorn>=0.34.3",
]
