[project]
name = "japanese-tts-webserver"
version = "0.1.0"
description = "FastAPI-based web server for Japanese Text-to-Speech synthesis supporting multiple TTS models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "parler-tts>=0.1",
    "pyrootutils>=1.0.4",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "rubyinserter>=0.1",
    "soundfile>=0.12.1",
    "torch>=2.0.0",
    "torchaudio>=2.7.1",
    "transformers==4.46.1",
    "uvicorn>=0.34.3",
]
